--- a/css/style.css
+++ b/css/style.css
@@ -1021,3 +1021,107 @@ display: block;
     margin-bottom: 24px;
 }
 */
+
+
+/*================================ADAPTIV=====================================*/
+
+/*----Mobile Setings: width 320px-------------*/
+/*----Plnshet Setings: width 768px------------*/
+/*----Dekstop Setings: width 1440px-----------*/
+
+@media (max-width: 1157px) {
+
+    /* Header Mobile START + container */
+
+    body {
+        font-family: "Roboto" sans-serif;
+        font-size: normal;
+        width: 320px;
+    }
+
+    .container {
+        max-width: 720px;
+        width: auto;
+        margin: 0 auto;
+
+        padding: 0 15px;
+    }
+
+    .header {
+        padding: 17px 1px;
+        width: auto;
+    }
+
+
+    /*Start-second section MOBILE*/
+
+    .second-section {
+        padding: 96px 0px;
+    }
+
+    .about-list {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .contain-icon {
+        display: none;
+    }
+
+    .about-title {
+        text-align: center;
+        font-family: "Roboto" sans-serif;
+        font-size: 36px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 40px;
+        /* 111.111% */
+        letter-spacing: 0.72px;
+        text-transform: capitalize;
+    }
+
+    .about-text {
+        font-family: "Roboto" sans-serif;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 24px;
+        /* 150% */
+        letter-spacing: 0.32px;
+    }
+
+    .about-list-item {
+        width: 288px;
+
+    }
+
+    /*SECON SECTION END MOBILE*/
+
+
+    /*Third section start Mobile*/
+
+    .team-title {
+
+        font-size: 36px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 40px;
+        /* 111.111% */
+        letter-spacing: 0.72px;
+        text-transform: capitalize;
+
+        text-align: center;
+    }
+
+    .team-list {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .team-list-item {
+        margin: 0 16px;
+
+        margin-bottom: 73px;
+
+    }
+}
