--- a/css/style.css
+++ b/css/style.css
@@ -1029,7 +1029,7 @@ display: block;
 /*----Plnshet Setings: width 768px------------*/
 /*----Dekstop Setings: width 1440px-----------*/
 
-@media (max-width: 1157px) {
+@media (max-width: 768px) {
 
     /* Header Mobile START + container */
 
@@ -1042,7 +1042,7 @@ display: block;
   
 
    .container {
-    max-width: 720px;
+    max-width: 320px;
         width: auto;
         margin: 0 auto;
     
@@ -1230,3 +1230,148 @@ display: block;
               margin: 0 auto;
           }
 }
+
+/*===================TABLET VERSION ADAPTATION=================*/
+
+@media screen and (min-width: 768px) and (max-width:1157px){
+.container {
+        max-width: 820px;
+       width: auto;
+        
+    }
+
+    /* Header Tablet   */
+
+    .header-decoration {
+        padding: 0;
+       
+    }
+
+    .wrapper-burger-btn {
+        display: none;
+    }
+
+    .wrapp-header  {
+        justify-content: space-between;
+       
+          
+    }
+
+    .logo{
+        margin-right: 120px;
+    }
+
+   
+
+    .wrapp-nav {
+        display: flex;
+        
+    }
+
+    .adress-list {
+        display: flex;
+    }
+
+    .contact-list {
+        flex-direction: column;
+        gap: 12px;
+       
+    }
+
+    /*FIRST SECTION TABLET*/
+       
+    /*SECOND SECTION TABLET*/
+
+   
+
+    .about-list{
+        display: flex;
+        width:768px ;
+        flex-wrap: wrap;
+        
+        gap: 24px;
+
+        
+    }
+
+    .contain-icon{
+        display: none;
+    }
+
+    .about-list-item{
+        width: 356px;
+        justify-content: center;
+            align-items: center;
+    }
+
+    .about-title{
+        
+            font-size: 36px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: 40px;
+            /* 111.111% */
+            letter-spacing: 0.72px;
+            text-transform: capitalize;
+    }
+
+    .about-text{
+        font-size: 16px;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 24px;
+            /* 150% */
+            letter-spacing: 0.32px;
+    }
+
+    /*THIRD SECTION TABLET*/
+
+   
+
+    .team-list{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+    }
+
+    /*Four section Tablet*/
+
+    /*FOOTER SECTION TABLET*/
+
+        .footer-wrapper {
+            flex-direction: row;
+            flex-wrap: wrap;
+            max-width: 580px;
+            gap: 72px 24px;
+        }
+    
+        .subscribe-menu {
+            margin-left: 0;
+        }
+    
+        .logo-footer {
+            text-align: left;
+        }
+    
+        .thumb-logo {
+            margin: 0;
+        }
+    
+        .social-links {
+            margin-left: 0;
+        }
+    
+        .social-links-text {
+            text-align: left;
+        }
+    
+        .subscribe-form {
+            flex-direction: row;
+        }
+    
+        .subscribe-text {
+            text-align: left;
+        }
+}
+
