--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,9 @@ button,input,select,optgroup{
             font-size: 100%;
             line-height: 1.15;
             margin: 0;
+            background-color: transparent;
+            border: none;
+            
 }
 
 /* Клас для обнулення базових властивостей списків (ul) */
@@ -140,6 +143,13 @@ section{
 }
 
 /*Nav*/
+.wrapper-burger-menu{
+    display: none;
+}
+
+.wrapper-burger-btn{
+    display: none;
+}
 
 .wrapp-header{
     display: flex;
@@ -795,6 +805,12 @@ background-color: #F4F4FD
         overflow: hidden;
 }
 
+.burger-is-open {
+    visibility: visible;
+    opacity: 1;
+    
+}
+
 
 
 
@@ -1054,6 +1070,8 @@ display: block;
         width: auto;
  }
 
+ 
+
         .nav-list,
         .adress-list {
             display: none;
@@ -1068,7 +1086,124 @@ display: block;
         /* 116.667% */
         letter-spacing: 0.54px;
         text-transform: uppercase;
+        margin-right: 149px;
+
+            
 }
+
+/*BURGER MENU*/
+
+.icon-burger-menu {
+    fill: #2F2F37;
+}
+
+.wrapper-burger-btn{
+    display: block;
+   
+    background-color: #ffffff;
+    width: 320px;
+    
+        
+}
+
+ .wrapper-burger-menu {
+     display: block;
+     visibility: visible;
+     opacity: 1;
+     position: fixed;
+     top: 50%;
+     left: 50%;
+     transform: translate(-50%, -50%) scale(1);
+     width: 320px;
+     min-height: 640px;
+     background: #fcfcfc;
+     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+     border-radius: 4px;
+     padding: 72px 24px 24px 24px;
+     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+     padding: 70px 16px 38px;
+     z-index: 10;
+ } 
+ 
+
+   .close-burger-menu {
+       position: absolute;
+       top: 24px;
+       right: 24px;
+       width: 24px;
+       height: 24px;
+       border-radius: 50%;
+       display: flex;
+       align-items: center;
+       justify-content: center;
+       background-color: #e7e9fc;
+       border: 1px solid rgba(0, 0, 0, 0.1);
+       padding: 0;
+       cursor: pointer;
+       transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        transform: translateY(50%);
+    }
+  .wrapper-burger-nav {
+    display: flex;
+    flex-direction: column;
+    gap: 150px;
+         }
+
+   .burger-nav{
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+
+    margin-bottom: 168px;
+
+   }
+
+   .burger-nav-item{
+    
+    font-size: 36px;
+        font-weight: 700;
+        line-height: 1.11111;
+        letter-spacing: 0.72px;
+        text-transform: capitalize;
+   }
+
+   .addres-burger{
+    display: flex;
+        flex-direction: column;
+        gap: 24px;
+
+        margin-bottom: 48px;
+   }
+
+ .address-burger-item{
+    font-size: 20px;
+        font-weight: 500;
+        line-height: 1.2;
+        letter-spacing: 0.4px;
+        color: #434455;
+ }
+
+ .addres-burger-link{
+    color: #434455;
+ }
+ 
+
+ .burger-social-list{
+    display: flex;
+    gap:40px;
+ }
+
+ .burger-nav-link:hover,
+ .burger-nav-link:focus{
+    color:#4D5AE5
+ }
+
+ .addres-burger-link:hover,
+ .addres-burger-link:focus{
+    color:#4D5AE5;
+ }
+
+
 
 /*Start first section MOBILE*/
 
@@ -1231,19 +1366,83 @@ display: block;
           }
 }
 
+@media (max-width:767px) {
+.backdrop {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(46, 47, 66, 0.4);
+        transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        visibility: hidden;
+        opacity: 0;
+        transition: opacity .4s visibility .4s;
+    }
+
+        .modalwindow {
+            width: 288px;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%) scale(1);
+            
+            min-height: 584px;
+            background: #fcfcfc;
+            box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+            border-radius: 4px;
+            padding: 72px 24px 24px 24px;
+            transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
+
+        .form-title{
+            font-size: 16px;
+                font-weight: 500;
+                line-height: 1.5;
+                text-align: center;
+                letter-spacing: 0.02em;
+                color: #2E2F42;
+                margin-bottom: 16px;
+        }
+
+                .modal-btn {
+                    position: absolute;
+                    top: 24px;
+                    right: 24px;
+                    width: 24px;
+                    height: 24px;
+                    border-radius: 50%;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    background-color: #e7e9fc;
+                    border: 1px solid rgba(0, 0, 0, 0.1);
+                    padding: 0;
+                    cursor: pointer;
+                    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+                }
+
+
+}
+
 /*===================TABLET VERSION ADAPTATION=================*/
 
-@media screen and (min-width: 768px) and (max-width:1157px){
+@media screen and (min-width: 767px) and (max-width:1157px){
 .container {
         max-width: 820px;
        width: auto;
         
     }
 
+    .wrapper-burger-menu{
+        display: none;
+    }
+
     /* Header Tablet   */
 
     .header-decoration {
         padding: 0;
+      
        
     }
 
@@ -1267,6 +1466,10 @@ display: block;
         display: flex;
         
     }
+
+        .nav-list {
+            margin-right: 0;
+        }
 
     .adress-list {
         display: flex;
