--- a/css/style.css
+++ b/css/style.css
@@ -805,10 +805,11 @@ background-color: #F4F4FD
         overflow: hidden;
 }
 
-.burger-is-open {
+.is-open {
     visibility: visible;
     opacity: 1;
-    
+   
+     
 }
 
 
@@ -817,6 +818,7 @@ background-color: #F4F4FD
 
 .modalwindow{
     width: 408px;
+    
     min-height: 584px;
     
     background: #fcfcfc;
@@ -1422,7 +1424,10 @@ display: block;
                     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
                 }
 
-
+ .is-open{
+    visibility: visible;
+    opacity: 1;
+ }
 }
 
 /*===================TABLET VERSION ADAPTATION=================*/
